--- a/template/default.html
+++ b/template/default.html
@@ -126,7 +126,7 @@
         $body$
 
         $if(index)$ $else$
-        <noscript><div id="noscript-warning-footer" class="admonition error"><div class="admonition-title"><p>[<strong>Error</strong>: JS disabled.]</p></div> <p>[Backlinks, similar links, and the link-bibliography require JS enabled to transclude.]</p></div></noscript>
+        <noscript><div id="noscript-warning-footer" class="admonition error"><div class="admonition-title"><p>[<strong>Error</strong>: JavaScript disabled.]</p></div> <p>[Backlinks, similar links, and the link-bibliography require JS enabled to load.]</p></div></noscript>
         $if(backlinksYes)$<section id="backlinks-section" class="level1">
           <h1><a href="#backlinks-section" title="Link to section: § 'Further Reading'">Further Reading</a></h1>
           <a id="backlinks" href="/metadata/annotation/backlink/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include-strict">[Backlinks]</a>
@@ -156,12 +156,12 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not anonymous-feedback-link">[&hairsp;Send Anonymous Feedback&hairsp;]</a>
           </p>
 
-		  <div id="x-of-the-day">
+          <div id="x-of-the-day">
             <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
 
-        	<a class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
+            <a class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
 
-        	<a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
+            <a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
           </div>
         </div>
 
@@ -179,6 +179,23 @@
       gtag('js', new Date());
       gtag('config', 'UA-18912926-1');
     </script>
+
+    <!-- low priority CSS, for JS-disabled users: ensure that NoScripters know what they are missing even if they jump to a section & miss the warning at top/bottom. -->
+    <noscript>
+      <style>
+        #markdownBody #noscript-warning-header {
+            position: fixed; /* sticky */
+            top: 0; /* at top */
+            width: 100%;
+            z-index: 99; /* Make sure it is on top */
+            background-color: #f8f8f8; /* Set a solid background color so   legible while positioned over text */
+            border-color: var(--GW-abstract-border-color); /* Make look like theme-toggle/admonitions a bit more */
+            border-width: 3px 3px 0 0 double;
+            border-style: double;
+        }
+        nav#sidebar { padding-top: 80px; } /* avoid overlap with page header */
+      </style>
+    </noscript>
 
   </body>
 </html>
