--- a/template/default.html
+++ b/template/default.html
@@ -75,11 +75,14 @@
     <link rel="icon" type="image/png" href="/static/img/logo/logo-favicon-small.png">
     <link rel="apple-touch-icon" type="image/png" href="/static/img/logo/logo-favicon-appletouch.png">
 
-    <!-- CSS for JS-disabled users: ensure that NoScripters know what they are missing even if they jump to a section & miss the warning at top/bottom. --> <noscript> <style>#markdownBody #noscript-warning-header {position: fixed; /* sticky */
-                                        top: 0; /* at top */width: 100%;z-index: 99; /* Make sure it is on top */
-                                        background-color: #f8f8f8; /* Set a solid background color so legible while positioned over text */
-                                        border-color: var(--GW-abstract-border-color); /* Make look like theme-toggle/admonitions a bit more */
-                                        border-width: 3px 3px 0 0; border-style: double;}
+    <!-- CSS for JS-disabled users: ensure that NoScripters know what they are missing even if they jump to a section & miss the warning at top/bottom. --> <noscript> <style>#markdownBody #noscript-warning-header { position: fixed; /* sticky */
+                                         top: 6px; /* at top */
+                                         width: 50%;
+                                         z-index: 99; /* Make sure it is on top */
+                                         background-color: #f8f8f8; /* Set a solid background color so legible while positioned over text */
+                                         border-color: var(--GW-abstract-border-color); /* Make look like theme-toggle/admonitions a bit more */
+                                         border-width: 6px 6px 6px 6px;
+                                         border-style: double; }
                       nav#sidebar { padding-top: 80px; } /* avoid overlap with page header */</style>
     </noscript>
   </head>
