--- a/css/default.css
+++ b/css/default.css
@@ -3391,13 +3391,41 @@ blockquote .TOC,
 ol.link-bibliography-list-compact {
     --list-left-padding: 2.25em;
 }
-ol.link-bibliography-list-compact > li::before {
+ol.link-bibliography-list-co
+mpact > li::before {
     font-family: var(--GW-monospaced-font-stack);
 }
 @media all and (max-width: 649px) {
     ol.link-bibliography-list-compact {
         --list-left-padding: 1.75em;
     }
+}
+
+
+/**********/
+/* /blog/ */
+/**********/
+
+body.blog-page #markdownBody .annotation {
+	border-bottom: 1px solid var(--GW-aux-links-collapse-border-color);
+}
+
+body.blog-page #markdownBody .annotation p.data-field {
+	--text-alignment: center;
+}
+
+body.blog-page #markdownBody .annotation .collapse.aux-links-append .collapse-content-wrapper,
+body.blog-page #markdownBody .annotation .collapse.file-include-collapse .collapse-content-wrapper {
+	padding-left: 1em;
+	padding-right: 0.5em;
+}
+body.blog-page #markdownBody .annotation .collapse.aux-links-append,
+body.blog-page #markdownBody .annotation .collapse.file-include-collapse {
+	--collapse-left-offset: 0px;
+
+	box-sizing: border-box;
+	border-left: 1px solid var(--GW-aux-links-collapse-border-color);
+	border-right: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 
 
